# rust_rmbg

./: .gitignore  Cargo.toml  README.md  error.txt  log.txt  out.txt  test.slint
src/: main.rs
ui/: main.slint
